--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,4 @@
+
 #centeredmenu {
     float: left;
     width: 100%;
@@ -6,6 +7,8 @@
     overflow: hidden;
     position: relative;
     margin-bottom: 10px;
+    border: 2px black;
+    border-radius: 25px;
 }
 
 #centeredmenu ul {
@@ -45,9 +48,8 @@
     color: black;
 }
 
-h1 {
-    text-align: center;
-    margin: 0;
+#carousel slide {
+    border-radius: 35px;
 }
 
 #mission {
@@ -66,18 +68,42 @@ h1 {
 #firefighter {
     text-align: right;
 }
+/* projects page */
 
-p {
-    margin-left: 50px;
+#taglines {
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+    color: darkgoldenrod;
+    font-size: 2em;
+    font-style: italic;
+}
+#signbutton {
+    border: 5px solid red;
+}
+h1 {
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    font-size: 4em;
+}
+
+h2 {
+    margin-left: 30px;
 }
 
 h3 {
     margin-left: 20px;
     margin: 0;
+    text-indent: 30px;
 }
 
 h4 { 
     text-indent: 50px;
+}
+
+p {
+    margin-left: 50px;
 }
 
 ul {
@@ -85,4 +111,11 @@ ul {
 }
 
 
+#footer { 
+    margin-left: 60px;
+    border: 40px;
+}
 
+#signs {
+    padding: 5px;
+}
